# core

./: .gitignore  CALLME_INTEGRATION_SUMMARY.md  CHANGELOG.md  Cargo.toml  README.md  STYLE.md  VOICE_CALL_INTEGRATION_SUMMARY.md  deny.toml  flake.nix  spec.md  test_all_voice_methods.py  test_callme_integration.py  test_voice_manual.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dependabot.yml  jsonrpc-client-npm-package.yml  nix.yml  zizmor-scan.yml
benches/: contacts.rs  create_account.rs  get_chat_msgs.rs  get_chatlist.rs  marknoticed_chat.rs  receive_emails.rs  search_msgs.rs
deltachat-contact-tools/: Cargo.toml
deltachat-contact-tools/src/: lib.rs  vcard.rs
deltachat-ffi/: Cargo.toml  Doxyfile  DoxygenLayout.xml  deltachat.h
deltachat-ffi/src/: lib.rs  lot.rs
deltachat-jsonrpc/: Cargo.toml  Cargo_simple.toml  VOICE_CALL_IMPLEMENTATION.md  simple_server  simple_server.rs  test_jsonrpc_voice.py  test_voice_basic  test_voice_basic.rs  test_voice_simple.rs
deltachat-jsonrpc/examples/: voice_call_test.rs
deltachat-jsonrpc/src/: api.rs  callme_integration.rs  lib.rs  voice_call.rs  voice_call_test.rs
deltachat-jsonrpc/src/api/types/: login_param.rs  message.rs
deltachat-jsonrpc/typescript/: package.json
deltachat-jsonrpc/typescript/src/: client.ts
deltachat-jsonrpc/typescript/test/: basic.ts  online.ts
deltachat-repl/: Cargo.toml
deltachat-repl/src/: cmdline.rs  main.rs
deltachat-rpc-client/: pyproject.toml  test_voice_rpc.py  test_voice_with_real_server.py  test_voicebot_simple.py  tox.ini
deltachat-rpc-client/examples/: voicebot_advanced.py
deltachat-rpc-client/tests/: test_multidevice.py  test_something.py
deltachat-rpc-server/: Cargo.toml
deltachat-rpc-server/npm-package/: package.json
deltachat-rpc-server/src/: main.rs
fuzz/: Cargo.toml
python/: pyproject.toml  tox.ini
python/examples/: test_examples.py
python/tests/: test_0_complex_or_slow.py  test_1_online.py  test_3_offline.py
scripts/: create-provider-data-rs.py
src/: accounts.rs  authres.rs  blob.rs  chat.rs  chatlist.rs  config.rs  configure.rs  constants.rs  contact.rs  context.rs  decrypt.rs  dehtml.rs  download.rs  e2ee.rs  ephemeral.rs  headerdef.rs  html.rs  imap.rs  imex.rs  key.rs  login_param.rs  message.rs  mimefactory.rs  mimeparser.rs  param.rs  peer_channels.rs  peerstate.rs  pgp.rs  plaintext.rs  provider.rs  push.rs  qr.rs  reaction.rs  receive_imf.rs  release.rs  scheduler.rs  securejoin.rs  smtp.rs  stock_str.rs  summary.rs  (+4 more)
(+36 files in other folders)
