[package]
name = "deltachat-jsonrpc"
version = "1.159.5"
description = "DeltaChat JSON-RPC API"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/chatmail/core"

[[bin]]
name = "simple_server"
path = "simple_server.rs"

[dependencies]
anyhow = { workspace = true }
deltachat = { workspace = true }
deltachat-contact-tools = { workspace = true }
num-traits = { workspace = true }
schemars = "0.8.22"
serde = { workspace = true, features = ["derive"] }
async-channel = { workspace = true }
serde_json = { workspace = true }
yerpc = { workspace = true, features = ["anyhow_expose", "openrpc"] }
typescript-type-def = { version = "0.5.13", features = ["json_value"] }
tokio = { workspace = true }
sanitize-filename = { workspace = true }
walkdir = "2.5.0"
base64 = { workspace = true }

# Voice calling dependencies (simplified version)
cpal = { version = "0.15.3" }
uuid = { version = "1.0", features = ["v4"] }
ringbuf = "0.4.7"
rand = "0.8"

# Callme P2P voice calling (simplified version for compatibility)
# callme = { git = "https://github.com/n0-computer/callme.git" }
# iroh = "0.28"
# iroh-roq = "0.1"
futures-concurrency = "7.6"
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
tempfile = { workspace = true }
futures = { workspace = true }


[features]
default = ["vendored"]
vendored = ["deltachat/vendored"]
